fix: upcoming shift styling without shifts
Set the height permanently to 230px

--- a/internal/static/internal/css/frontpage.css
+++ b/internal/static/internal/css/frontpage.css
@@ -79,7 +79,6 @@
     flex-flow: row;
     justify-content: space-between;
     margin: 10px 0;
-
 }
 
 .frontpage__information_row {
@@ -99,6 +98,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0.4em;
+    height: 230px;
 }
 
 .frontpage__shift_coworkers_inline {
